# Legal-Docs-Rag

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  docker-compose.yaml  dockerfile  main.py  pyproject.toml  unstruct_api_test.ipynb
backend/src/: __init__.py  embedding_service.py  gemini_client.py  image_processor.py  llama_processor.py  main_pipeline.py  qdrant_client_pool.py  redis_cache.py  uio_processor.py  vector_database_service.py
backend/src/Retrievers/: __init__.py  gemini_augumentator.py  standard_retreiver.py
cloudflared/: config.conf  config.yml  start-tunnel.sh  tunnel.json  tunnel.txt
frontend/: README.md  config.py  demo.py  dockerfile  main.py  pyproject.toml  requirements.txt  run.py
frontend/templates/: index.html
nginx/: dockerfile  nginx.conf
